--- a/index.html
+++ b/index.html
@@ -12,38 +12,40 @@
 </head>
 
 <body>
-  <div class="screen">
-    <h1>Aim Training</h1>
-    <a href="#" class="start">Начать игру</a>
-  </div>
-
-  <div class="screen" id="screen up">
-    <h1>Выберите время</h1>
-    <ul class="time-list">
-      <li>
-        <button class="time-btn" data-time="10">
-          10 сек
-        </button>
-      </li>
-      <li>
-        <button class="time-btn" data-time="30">
-          30 сек
-        </button>
-      </li>
-      <li>
-        <button class="time-btn" data-time="60">
-          60 сек
-        </button>
-      </li>
-    </ul>
-  </div>
-
-  <div class="screen">
-    <div class="wrapper">
-      <h3>Осталось <span id="time">00:00</span></h3>
-      <h3>Лучший счет <span id="best-score"></span></h3>
+  <div class="container">
+    <div class="screen">
+      <h1>Aim Training</h1>
+      <a href="#" class="start">Начать игру</a>
     </div>
-    <div class="board" id="board"></div>
+
+    <div class="screen" id="screen up">
+      <h1>Выберите время</h1>
+      <ul class="time-list">
+        <li>
+          <button class="time-btn" data-time="10">
+            10 сек
+          </button>
+        </li>
+        <li>
+          <button class="time-btn" data-time="30">
+            30 сек
+          </button>
+        </li>
+        <li>
+          <button class="time-btn" data-time="60">
+            60 сек
+          </button>
+        </li>
+      </ul>
+    </div>
+
+    <div class="screen">
+      <div class="wrapper">
+        <h3>Осталось <span id="time">00:00</span></h3>
+        <h3>Лучший счет <span id="best-score"></span></h3>
+      </div>
+      <div class="board" id="board"></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
