--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="game, browser, js">
   <meta name="description" content="Это мини игра в браузере">
   <link rel="stylesheet" href="styles.css" />
-  <title>AIM Training | Проект 5</title>
+  <title>AIM Training</title>
 </head>
 
 <body>
